--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,28 +1,28 @@
 {
   "name": "Expense Tracker",
-  "short_name": "Expense Track",
+  "short_name": "Expense Tracker",
   "description": "Track the Expense among mates.",
   "theme_color": "#000",
   "background_color": "#000",
   "display": "standalone",
-  "scope": "https://ishushreyas.vercel.app/",
-  "start_url": "https://ishushreyas.vercel.app/",
+  "scope": "https://room-rent-job.onrender.com/",
+  "start_url": "https://room-rent-job.onrender.com/",
   "categories": [
     "social"
   ],
   "icons": [
     {
-      "src": "https://expense-tracker/icon-192.png",
+      "src": "https://room-rent-job.onrender.com/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://nakama.social/icon-512.png",
+      "src": "https://room-rent-job.onrender.com/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "https://nakama.social/icon-512-maskable.png",
+      "src": "https://room-rent-job.onrender.com/icon-512-maskable.png",
       "sizes": "1024x1024",
       "type": "image/png",
       "purpose": "maskable any"
@@ -30,11 +30,11 @@
   ],
   "url_handlers": [
     {
-      "origin": "https://ishushreyas.vercel.app"
+      "origin": "https://room-rent-job.onrender.com"
     }
   ],
   "share_target": {
-    "action": "https://ishushreyas.vercel.app/",
+    "action": "https://room-rent-job.onrender.com/",
     "method": "GET",
     "enctype": "application/x-www-form-urlencoded",
     "params": {
