--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
